syntax = "proto3";

option csharp_namespace = "GrpcGames";

package GamesApi;


service GamesGrpc {
	rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse) {}
	rpc GetById(GetByIdRequest) returns (GameGrpc) {}
}

message Empty {

}

message GetByIdsResponse {
	repeated GameGrpc items = 1;
}

message GetByIdsRequest {
	repeated int32 items = 1;
}

message GetByIdRequest {
	int32 id = 1;
}

message GameGrpc {
	string title = 1;
	int32 year = 2;
	string description = 3;
	repeated ImageGrpc images = 4;
	string publisher = 5;
	repeated DeveloperGrpc developers = 6;
	repeated int32 genres = 7;
	bool success = 8;
}

message ImageGrpc {
	string url = 1;
}

message DeveloperGrpc {
	string name = 1;
	string payload = 2;
}